Add Basic Post Display
Added a post display page component and a model to hold the posts
data. Want to add links to other posts, and add a component to
display posts on the homepage in a pleasing way. Short session
today.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,13 @@ to include the github logo and a link to the github project itself. -->
 <!-- Next step is to make the github project, push to it, and then update 
 the link to be the actual project once the link exists. -->
 
+<!-- ---------------------------SESSION 2------------------------------- -->
+
+<!-- After adding some basic text to the homepage it's time to add a blog
+post component to the project so I can start adding blog posts and make it an
+actual blog. I imagine this is a component I'll need to revisit many times over
+the course of the development of this project.  -->
+
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   <img
