--- a/src/app/blog/homepage/homepage.component.html
+++ b/src/app/blog/homepage/homepage.component.html
@@ -12,3 +12,7 @@
     are held inside of this one.
 </h3>
 
+<!-- Added temporary blog posts here -->
+<a href="/home/post">Blog Post 1</a>
+<a href="/home/post">Blog Post 2</a>
+<a href="/home/post">Blog Post 3</a>
