--- a/src/app/blog/post/post.component.html
+++ b/src/app/blog/post/post.component.html
@@ -14,7 +14,11 @@ homepage in the toolbar at the top. -->
 
 <h1>{{post.title}}</h1>
 
-<p *ngFor="let item of post.content;">{{item.text}}</p>
+<div *ngFor="let item of post.content;">
+    <p *ngIf="item | guardType: isText as text">{{text.text}}</p>
+    <img *ngIf="item | guardType: isImage as image" [src]="image.url" />
+    <code *ngIf="item | guardType: isCode as code">{{code.code}}</code>
+</div>
 
 <!-- I'll probably want to make this footer it's own component, but
 it can go here for now. -->
