--- a/src/app/blog/create-post/create-post.component.html
+++ b/src/app/blog/create-post/create-post.component.html
@@ -7,11 +7,13 @@
         <button (click)="addImage()" class="add-button">Add Image</button>
     </div>
     <div class="fill-content-section">
+        <label for="title">Title</label>
+        <input id="title" [(ngModel)]="title" />
         <div *ngFor="let cont of content;">
-            <textarea *ngIf="cont | guardType : isText as t" class="text-content"></textarea>
-            <textarea *ngIf="cont | guardType : isCode as c" class="code-content"></textarea>
-            <input *ngIf="cont | guardType : isImage as i" />
+            <textarea *ngIf="cont | guardType : isText as t" class="text-content" [(ngModel)]="t.text"></textarea>
+            <textarea *ngIf="cont | guardType : isCode as c" class="code-content" [(ngModel)]="c.code"></textarea>
+            <input *ngIf="cont | guardType : isImage as i" [(ngModel)]="i.url" />
         </div>
     </div>
-    <button (click)="post()">Post</button>
 </div>
+<button (click)="post()">Post</button>
