Add Database call to Post Display
Changed the Post Component to display data from the database instead of
the stock post I had originally. Now that I can create posts and view
posts from database, the basic functionality of the blog is complete.
Next, we'll update the look of the blog, add the ability to link one
blog post to the next, and verify that they get sorted correctly on the
homepage. Part of doing that will be adding more blog posts.

--- a/src/app/blog/create-post/create-post.component.html
+++ b/src/app/blog/create-post/create-post.component.html
@@ -5,6 +5,8 @@
         <button (click)="addText()" class="add-button">Add Text</button>
         <button (click)="addCode()" class="add-button">Add Code</button>
         <button (click)="addImage()" class="add-button">Add Image</button>
+        <button (click)="addHeading()" class="add-button">Add Heading</button>
+        <button (click)="addLink()" class="add-button">Add Link</button>
     </div>
     <div class="fill-content-section">
         <label for="title">Title</label>
@@ -13,6 +15,8 @@
             <textarea *ngIf="cont | guardType : isText as t" class="text-content" [(ngModel)]="t.text"></textarea>
             <textarea *ngIf="cont | guardType : isCode as c" class="code-content" [(ngModel)]="c.code"></textarea>
             <input *ngIf="cont | guardType : isImage as i" [(ngModel)]="i.url" />
+            <input *ngIf="cont | guardType : isLink as l" [(ngModel)]="l.url" />
+            <input *ngIf="cont | guardType : isHeading as h" [(ngModel)]="h.text" />
         </div>
     </div>
 </div>
