--- a/src/app/blog/post/post.component.scss
+++ b/src/app/blog/post/post.component.scss
@@ -1,3 +1,18 @@
+p {
+    font-size: 12pt;
+}
+
+h1 {
+    font-size: 24pt;
+}
+
 code {
     background-color: #eee;
+    font-size: 12pt;
+    font-family: "Courier New", "Courier";
+    display: block;
+}
+
+a {
+    font-size: 14pt;
 }
