--- a/src/app/blog/homepage/homepage.component.html
+++ b/src/app/blog/homepage/homepage.component.html
@@ -1,18 +1,23 @@
 <app-toolbar-buffer></app-toolbar-buffer>
-<h1>Welcome to the Self Documenting Blog!</h1>
-<p>The purpose of this blog/website is to document the learning experience 
-    of creating and building a personal website and tracking my learning 
-    process along the way. The timeline of creation will be tracked by blog
-    posts that I create. In that way it is "self documenting". This blog is
-    written in Angular, because that's what I know to get started.
-</p>
-<h3>
-    Below are the blog entries listed in reverse chronological order. Click one 
-    below read and learn about the progress! To the right are other projects that 
-    are held inside of this one.
-</h3>
+<div class="container">
+    <div class="blog-posts">
+        <h1>Welcome to the Self Documenting Blog!</h1>
+        <p>The purpose of this blog/website is to document the learning experience 
+            of creating and building a personal website and tracking my learning 
+            process along the way. The timeline of creation will be tracked by blog
+            posts that I create. In that way it is "self documenting". This blog is
+            written in Angular, because that's what I know to get started.
+        </p>
+        <h3>
+            Below are the blog entries listed in reverse chronological order. Click one 
+            below read and learn about the progress! To the right are other projects that 
+            are held inside of this one.
+        </h3>
+        <app-post-preview *ngFor="let post of postPreviews;" [postPreview]="post" (postId)="navigateOnClick($event)"></app-post-preview>
+    </div>
+    <div class="other-links">
+        <a routerLink="/home/create">Create New Post</a>
+        <button (click)="signInWithGoogle()">Login With Google</button>
+    </div>
+</div>
 
-<!-- This is where the list of blog posts will go, listed in reverse chronological
-order. These PostPreviewComponents will allow the user to click on them and see 
-relevant post that it refers too. -->
-<app-post-preview *ngFor="let post of postPreviews;" [postPreview]="post" (postId)="navigateOnClick($event)"></app-post-preview>
