--- a/src/app/blog/homepage/homepage.component.scss
+++ b/src/app/blog/homepage/homepage.component.scss
@@ -1,3 +1,17 @@
 p, h3 {
-    width: 40%;
+    width: 70%;
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.blog-posts {
+    width: 70%;
+}
+
+.other-links {
+    width: 30%;
 }
