Update Post Component View
Updated the view of the post page to improve the readability of the
posts. Added Links to neighboring blog posts to the footer of the blog.
Also changed the cursor over the post previews and the heading in the
toolbar to be a pointer.

Closes #3, #5, #7, #8

--- a/src/app/blog/post/post.component.html
+++ b/src/app/blog/post/post.component.html
@@ -5,19 +5,27 @@ This way I can expand the types of blog posts I can make, to make the
 blog more engaging. -->
 
 <app-toolbar-buffer></app-toolbar-buffer>
+<div class="container">
+    <div class="content-container">
+        <h1>{{post.title}}</h1>
 
-<h1>{{post.title}}</h1>
-
-<div *ngFor="let item of post.content;">
-    <p *ngIf="item | guardType : isText as text">{{text.text}}</p>
-    <img *ngIf="item | guardType : isImage as image" [src]="image.url" />
-    <pre *ngIf="item | guardType : isCode as code"><code>{{code.code}}</code></pre>
-    <a *ngIf="item | guardType : isLink as link" [href]="link.url">{{link.url}}</a>
-    <h3 *ngIf="item | guardType : isHeading as heading">{{heading.text}}</h3>
+        <div *ngFor="let item of post.content;">
+            <p *ngIf="item | guardType : isText as text">{{text.text}}</p>
+            <img *ngIf="item | guardType : isImage as image" [src]="image.url" />
+            <pre *ngIf="item | guardType : isCode as code"><code>{{code.code}}</code></pre>
+            <a *ngIf="item | guardType : isLink as link" [href]="link.url">{{link.url}}</a>
+            <h3 *ngIf="item | guardType : isHeading as heading">{{heading.text}}</h3>
+        </div>
+    </div>
 </div>
+
+
+
 
 <!-- I'll probably want to make this footer it's own component, but
 it can go here for now. -->
 <div class="footer">
-    
+    <a *ngIf="previousPreview" routerLink="/home/post" [queryParams]="{postId: previousPreview.id}" class="previous">{{previousPreview.title}}</a>
+    <div class="spacer" *ngIf="previousPreview || nextPreview"></div>
+    <a *ngIf="nextPreview" routerLink="/home/post" [queryParams]="{postId: nextPreview.id}" class="next">{{nextPreview.title}}</a>
 </div>
