--- a/src/app/blog/post/post.component.scss
+++ b/src/app/blog/post/post.component.scss
@@ -6,6 +6,10 @@ h1 {
     font-size: 24pt;
 }
 
+h3 {
+    font-size: 18pt;
+}
+
 code {
     background-color: #eee;
     font-size: 12pt;
@@ -15,4 +19,37 @@ code {
 
 a {
     font-size: 14pt;
+}
+
+.content-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    height: 100px;
+    width: 100%;
+    align-items: center;
+}
+
+.previous {
+    justify-self: start;
+}
+
+.next {
+    justify-self: end;
+}
+
+.spacer {
+    flex: 1;
 }
