--- a/src/app/blog/post/post.component.html
+++ b/src/app/blog/post/post.component.html
@@ -4,6 +4,7 @@ content of the page will be stored as an ordered array of content pieces.
 This way I can expand the types of blog posts I can make, to make the 
 blog more engaging. -->
 
+<app-toolbar></app-toolbar>
 <app-toolbar-buffer></app-toolbar-buffer>
 <div class="container">
     <div class="content-container">
