--- a/src/app/minesweeper-world/board/board.component.scss
+++ b/src/app/minesweeper-world/board/board.component.scss
@@ -38,3 +38,21 @@
 .mode-select:hover {
 	background-color: lightgray;
 }
+
+.red {
+	color: red;
+}
+
+.green {
+	color: green;
+}
+
+.modal {
+	max-width: 50%;
+	min-width: 33%;
+}
+
+.result-text {
+	font-size: 30pt;
+	display: block;
+}
