Add Syntax Highlighting
Added Prism.js to allow our code blocks to show code with syntax
highlighting. We just use the standard theme for JavaScript, we might
mess with it later. In the future, we'll want to add an option on the
add post page to indicate what type of code is in the code block. We
also refactored the getPostContent function from the firebase service to
be an async function that no longer returns a post that hasn't loaded
its content yet. Might be good to talk about in a blog post.

Closes #9 #10 #13 #14

--- a/src/app/blog/post/post.component.html
+++ b/src/app/blog/post/post.component.html
@@ -11,9 +11,9 @@ blog more engaging. -->
         <h1>{{post.title}}</h1>
 
         <div *ngFor="let item of post.content;">
-            <p *ngIf="item | guardType : isText as text">{{text.text}}</p>
+            <p *ngIf="item | guardType : isText as text" [innerHTML]="text.text"></p>
             <img *ngIf="item | guardType : isImage as image" [src]="image.url" />
-            <pre *ngIf="item | guardType : isCode as code"><code>{{code.code}}</code></pre>
+            <pre *ngIf="item | guardType : isCode as code"><code [innerHTML]="code.code"></code></pre>
             <a *ngIf="item | guardType : isLink as link" [href]="link.url">{{link.url}}</a>
             <h3 *ngIf="item | guardType : isHeading as heading">{{heading.text}}</h3>
         </div>
