--- a/src/app/blog/post/post.component.scss
+++ b/src/app/blog/post/post.component.scss
@@ -15,6 +15,9 @@ code {
     font-size: 12pt;
     font-family: "Courier New", "Courier";
     display: block;
+    -moz-tab-size : 4;
+    -o-tab-size : 4;
+    tab-size: 4;
 }
 
 a {
