Updated Links On Homepage
I updated the links to the games on the homepage and added the toolbar
at the top of the list em all game to ensure that player could easily
navigate back to the homescreen. I also made some minor tweaks to the
list em all game to improve readability, and overall style. I added the
red highlighting on the pokemon that were missed, and added a "please
select generation" message when the player hasn't yet chosen a generation
to play on.

--- a/src/app/blog/homepage/homepage.component.html
+++ b/src/app/blog/homepage/homepage.component.html
@@ -18,7 +18,16 @@
     </div>
     <div class="other-links">
         <button (click)="signInWithGoogle()">Login With Google</button>
-        <a routerLink="/home/create" style="display: block;">Create New Post</a>
+        <a routerLink="/home/create" style="display: block;" *ngIf="hasPermissions()">Create New Post</a>
+        <div class="game-display">
+            <a routerLink="/minesweeper" class="game-link">Minesweeper World</a>
+            <p>Play an upscale twist on the classic game without borders!</p>
+        </div>
+        <div class="game-display">
+            <a routerLink="/list-em-all" class="game-link">Gotta List 'em all!</a>
+            <p>Test Your Pok&eacute;mon knowledge by listing 'em all in each generation!</p>
+        </div>
+        
     </div>
 </div>
 
