--- a/src/app/blog/homepage/homepage.component.scss
+++ b/src/app/blog/homepage/homepage.component.scss
@@ -15,3 +15,24 @@ p, h3 {
 .other-links {
     width: 30%;
 }
+
+.game-link {
+    text-decoration: none;
+    font-size: 14pt;
+    &:link, &:visited {
+        color: white;
+    }
+
+    &:active, &:hover {
+        color: purple
+    }
+}
+
+.game-display {
+    background-color: #11aeec;
+    margin: 2%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
