--- a/src/app/util/toolbar/toolbar.component.scss
+++ b/src/app/util/toolbar/toolbar.component.scss
@@ -20,7 +20,7 @@
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: #1976d2;
+    background-color: #11aeec;
     color: white;
     font-weight: 600;
 }
