Finish Snake Game
Added instructions, centered the board, added a link on the homepage,
added a link back to the homepage, added the energy mechanic, added
win and lose modals, and made the head a different color. Generally,
I'm happy with where the game is now, and will be pushing it.

--- a/src/app/blog/homepage/homepage.component.html
+++ b/src/app/blog/homepage/homepage.component.html
@@ -27,7 +27,9 @@
             <a routerLink="/list-em-all" class="game-link">Gotta List 'em all!</a>
             <p>Test Your Pok&eacute;mon knowledge by listing 'em all in each generation!</p>
         </div>
-        
+        <div class="game-display">
+            <a routerLink="/snake" class="game-link">Snake</a>
+            <p>Fill the board by eating the food, without hitting yourself.</p>
+        </div>
     </div>
 </div>
-
