--- a/src/app/snake/snake-game/snake-game.component.scss
+++ b/src/app/snake/snake-game/snake-game.component.scss
@@ -1,8 +1,12 @@
 .tile {
     width: 50px;
     height: 50px;
-    background-color: gray;
+    background-color: white;
     border: 1px solid black;
+}
+
+.head {
+    background-color: gray;
 }
 
 .row {
@@ -15,4 +19,40 @@
 
 .food {
     background-color: red;
+}
+
+#board {
+    margin-top: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 25%;
+    right: 25%;
+    height: 75px;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.length-display {
+    font-size: 16pt;
+}
+
+.modal {
+	max-width: 50%;
+	min-width: 33%;
+}
+
+.result-text {
+    font-size: 20pt;
 }
